--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -1,9 +1,15 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806625.md#1" target="_blank">看守所不给看病吃药 上海89岁老人绝食抗议</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806625.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/VideoID-6abvRZWG7N4-150x120.jpg" align ="left"></a>上海89岁老人刘淑珍在两会期间向上海市政府递交维权材料时被绑架刑拘，因身患多种疾病得不到医疗需求，昨日（19日）她在看守所中开始绝食抗议，并拒绝律师的取保候审提议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 2:51 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806673.md#1" target="_blank">美学者：台选举结果是多数台湾人彻底胜利</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806673.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/PO_X5717-600x400-2-1-150x120.jpg" align ="left"></a>2020中华民国总统暨立委选举，蔡英文以817万票创下从1996年开启直选以来最高得票纪录成功连任，民进党大胜立委获得46席，国民党惨败获得22席。美国政治学者戴雅门认为，这场选举结果是蔡英文总统和多数台湾人彻底的胜利。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 2:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806368.md#1" target="_blank">【预告】新唐人将对大陆独家播出神韵晚会</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806368.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2020_SY_EC_WC_CN-NewYear_General-1-150x120.png" align ="left"></a>2020中国黄历新年期间，新唐人将独家播出《新唐人全球华人新年晚会》、《交响乐音乐会》，由神韵艺术团、神韵交响乐团、飞天艺术大学、飞天艺术学院联合演出。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 1:25 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806369.md#1" target="_blank">感谢农民支持 川普：将促中方执行贸易协议</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806369.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NY69N-150x120.jpg" align ="left"></a>周日（1月19日），美国总统川普（特朗普）感谢农民在美中贸易战中对他的支持，并表示，他将大力推动第一阶段贸易协议，以确保中方执行协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 1:23 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806229.md#1" target="_blank">开豪车游故宫 红三代被揭考试违规</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806229.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/gugong-1-1-150x120.jpg" align ="left"></a>中共“红三代”高露驾豪车游故宫事件持续发酵。日前，高露又被网民披露其此前考试违规带手机进入考场的照片。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 1:14 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805546.md#1" target="_blank">阮民安受邀为天下制裁集会献唱 突遭港警阻止</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805546.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912260923562188-150x120.jpg" align ="left"></a>1月19日，香港民间发起“天下制裁”流水式集会。但在活动有序地进行到中途，暴察突然滥抓滥捕，还发射催泪弹驱离民众。艺人阮民安（Tommy）本应受邀上台演唱歌曲《煲底之约》，也被便衣警察突然要求终止活动。面对警方的为所欲为，杜汶泽在facebook发文劝谕市民：“见到差佬（警察）不要有眼神接触……因为它们（警察）已经不是人了。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 11:31 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/1/n11761234.md#1" target="_blank">【思想领袖】陈日君：港府只是一个傀儡</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/1/n11761234.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/CRJ__1200x800-150x120.jpg" align ="left"></a>英文《大纪元时报》“美国思想领袖”（American Thought Leader）节目主持人杨杰凯（Jan Jekielek）于2019年12月7日对曾任香港第六任主教的天主教枢机主教陈日君进行了专访。下面请看这个专访的全文翻译：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 11:16 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805358.md#1" target="_blank">与轧故宫红三代同名遭骂 女星高露无辜躺枪</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805358.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/VCG111201788729-1-150x120.jpg" align ="left"></a>近日，一则“北京女子开豪华奔驰游北京故宫”的新闻引发众怒，连中共喉舌也发文讨伐红三代炫富女耍特权。因与当事人同名一度遭网友骂翻，演员高露1月19日晚在微博发文澄清：“拒绝躺枪，关注作品，好好过年，散啦散啦！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 11:15 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/29/n11753795.md#1" target="_blank">从“近海”到“两极” 中共海军战略内幕</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/29/n11753795.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/09/909181214411538-150x120.jpg" align ="left"></a>中共对北极虎视眈眈，将自己定义为“近北极国家”。中共野心不仅想获得更多未开发资源，更企图将其军事野心扩张到北极。美国专家近期撰文，曝光中共海军新战略的未来目标是向两极拓展，以及觊觎北极的来龙去脉。
 
 在2012年至2017年，中共在北极投资近900亿美元，包括在在北极研究上投入大量资金。丹麦国防情报局局长拉尔斯?芬森（Lars Findsen）表示，在审.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 9:16 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank">【持续更新】武汉肺炎：突增136病例 增1死亡</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1097066394-150x120.jpg" align ="left"></a>中国武汉去年12月爆发不明肺炎，今年1月8日确定为新型冠状病毒，世界卫生组织13日将此病毒定名为“2019新型冠状病毒”（2019－nCoV）。目前出现2例死亡病例，该新型冠状病毒已有扩散趋势，泰国和日本近日先后确诊个案，患者皆到过武汉。但在中国仍只有武汉有疫情消息。本文将持续更新关于武汉肺炎疫情的最新进展。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 8:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805938.md#1" target="_blank">太贵怕被偷？农民背着猪耕田 笑翻网络</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805938.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Untitled-8-150x120.jpg" align ="left"></a>中国猪肉价格飙涨，又衍生出一些意想不到的问题。农民外出劳作，家里的猪万一被偷可不是小事，一个农民干脆背着自己的猪犁地，让许多网友笑翻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 8:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805786.md#1" target="_blank">大陆旅游业萧条 “途牛网”亏损裁员</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805786.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/02/1302150056031119-150x120.jpg" align ="left"></a>大陆知名旅游平台“途牛旅游网”近日被曝已经开始裁员，公司业绩持续亏损。大陆旅游行业整体上，无论线上平台还是实体旅行社，都出现萧条景象。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 7:22 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805767.md#1" target="_blank">港警再放弹 中共挑衅世界 料掀国际制裁潮</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805767.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/photo_2020-01-19_03-27-06-150x120.jpg" align ="left"></a>全球11个国家22个城市的香港人于1月19日发起“天下制裁大游行”，促各国政府尽快实施制裁，惩罚违反人权的香港和中共官员。19日在香港，已获不反对通知书的“天下制裁”集会于下午3时在遮打花园举行。不过，集会期间警方借故挑衅、提早腰斩。大批防暴警察其后更在驱散民众前后狂放催泪弹，抓捕参加集会的市民，集会申请人刘颕匡在宣布集会有15万人参与后，更被警方以“煽动群.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 7:01 AM							</td></tr>
@@ -31,13 +37,7 @@
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805095.md#1" target="_blank">【直播回放】15万港人集会 遭警方腰斩</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805095.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2001190259451501-150x120.jpg" align ="left"></a>2020年1月19日，香港民间发起“天下制裁”流水式集会，继续抗争，并呼吁其他国家跟随美国一道，制裁侵犯人权的香港及中共官员。大纪元、新唐人对此集会进行网络直播，请锁定新闻直播间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 9:19 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/4/n11768135.md#1" target="_blank">中共采矿背后黑幕：矿区百姓生活在毒源中</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/4/n11768135.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/11/1311111329412436-150x120.jpg" align ="left"></a>郁郁葱葱的广西大厂丘陵孕育着祖先留下的宝藏，这里有中国著名的超大型金属矿。然而这是一种幸福还是悲苦，要看生在何时。中共治下青山已变銹田，宝藏却成毒源。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 8:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801551.md#1" target="_blank">【直播回放】纽约港人集会游行吁制裁中共</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801551.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15eb6577428085aa_ttl7dayMUw_IMG_0784-600x450-1-150x120.jpg" align ="left"></a>本周末，全球多个城市的香港人将举行“恭喜制裁大游行”，促外国政府尽快实施制裁，惩罚违反人权的香港和中共官员。大纪元、新唐人将对纽约游行进行网络直播，请锁定新闻直播间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 8:33 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804804.md#1" target="_blank">腾讯主席马化腾去职财付通董事长及总经理</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804804.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/190321090152100311-150x120.jpg" align ="left"></a>腾讯主席马化腾日前卸任财付通董事长和总经理，这是其在去年9月卸任腾讯征信法定代表人之后，再次离职。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 7:47 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804292.md#1" target="_blank">中共允诺购巨额美农产品 巴西库存或暴增四倍</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804292.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1142701434-150x120.jpg" align ="left"></a>在美中签署第一阶段贸易协议中，中共允诺购买巨额美国农产品，有贸易界人士认为，中共此举将令巴西农产品出口减少100亿美元，库存将增加四倍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 6:58 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804541.md#1" target="_blank">有限资源应该更好使用 美国和平队撤出中国</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804541.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Madagascar_Peace_Corps_volunteers_swearing_in_April_2006-150x120.jpg" align ="left"></a>美国和平队（Peace Corps）1月16日决定，将终止在中国大陆的志愿计划，并已正式将这一决定通知国会。从2020年6月起，和平队将撤出在华志愿者。目前，和平队网站中国项目征召栏目前显示：没有在华和平队志愿者职位。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 6:12 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804572.md#1" target="_blank">程晓容：红三代车入故宫 大陆社会畸形无底线</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804572.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/851e9ea68d96f43e3450e6f7c72814b3-150x120.jpg" align ="left"></a>有人认为，“红三代”车入故宫成热门话题，或许是官方有意以此转移视线。其实，此事凸显中共体制的邪恶与败坏。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 5:46 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804078.md#1" target="_blank">官方未公布西宁路面塌陷原因 各方说法不一</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804078.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/8f1b829e025bea170d28d5ec498587a6-600x400-1-150x120.jpg" align ="left"></a>西宁公交站路面塌陷已致9死17伤，事发4天后仍有1名女性失联。截止发稿，官方仍未公布事故原因，但各方说法不一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 4:23 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803887.md#1" target="_blank">大陆车企卖房收1.68亿扭亏 股票涨停</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803887.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/0d200b63bdf261cb1251b781df880bbd-600x400-150x120.jpg" align ="left"></a>大陆海马汽车1月16日发布了2019年业绩预告，报告显示，预计2019年扭亏为盈，归属于上市公司股东的净利润9000万元至1.3亿元（人民币，下同）。报告一出，该公司股票17日一开盘便一字板封涨停。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 3:10 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801155.md#1" target="_blank">澳洲参议员：法轮功为中国所有良心犯争人权</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801155.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/55a9f7232e4efea777aef08c98ebd744-150x120.jpg" align ="left"></a>澳洲法轮功学员于2019年9月16日再次把在澳洲各地征集的呼吁制止中共活摘器官暴行的签名提交给澳联邦政府并备案。从2009年11月开始提交第一批签名至今，澳洲法轮大法学会提交至联邦政府的同一内容征签表的签名总数累计为257,312。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 2:27 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806367.md#1" target="_blank">每日三退声明精选（2020/01/19）</a><br></h3>我在无意之间帮助了一名法轮功学员来到日本后，家人遭到共产邪党的骚扰，虽是无心之举，但也让我看到了共产党的邪恶本质，我相信这样不得人心的邪党对法轮功如此敏感必是看到了不久后自己灭亡而产生的恐惧，因此我要在此退党团！让正义回归中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 11:31 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805481.md#1" target="_blank">新疆喀什发生规模6.4地震  余震不断</a><br></h3>1月19日晚9时27分，新疆喀什地区发生规模6.4地震，震源深度16公里，当地震感强烈，随后连续发生多起余震。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 3:39 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804768.md#1" target="_blank">黑龙江法轮功学员孟宪荣含冤离世</a><br></h3>黑龙江绥棱县80岁的法轮功学员孟宪荣于2015年7月16日清晨3点多被警察入室绑架，后被非法判刑3年半，保外就医，于2019年10月含冤离世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 8:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_3.md#1">下一页</a></h3></td></tr>
